// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`asymmetric matcher error 1`] = `
{
  "actual": "hello",
  "diff": null,
  "expected": "StringContaining "xx"",
  "message": "expected 'hello' to deeply equal StringContaining "xx"",
}
`;

exports[`asymmetric matcher error 2`] = `
{
  "actual": "hello",
  "diff": null,
  "expected": "StringNotContaining "ll"",
  "message": "expected 'hello' to deeply equal StringNotContaining "ll"",
}
`;

exports[`asymmetric matcher error 3`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[2m  Object {[22m
[32m-   "foo": StringContaining "xx",[39m
[31m+   "foo": "hello",[39m
[2m  }[22m",
  "expected": "Object {
  "foo": StringContaining "xx",
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: StringContaining "xx" }",
}
`;

exports[`asymmetric matcher error 4`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[2m  Object {[22m
[32m-   "foo": StringNotContaining "ll",[39m
[31m+   "foo": "hello",[39m
[2m  }[22m",
  "expected": "Object {
  "foo": StringNotContaining "ll",
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: StringNotContaining "ll" }",
}
`;

exports[`asymmetric matcher error 5`] = `
{
  "actual": "hello",
  "diff": "[32m- Expected:[39m 
stringContainingCustom<xx>

[31m+ Received:[39m 
"hello"",
  "expected": "stringContainingCustom<xx>",
  "message": "expected 'hello' to deeply equal stringContainingCustom<xx>",
}
`;

exports[`asymmetric matcher error 6`] = `
{
  "actual": "hello",
  "diff": "[32m- Expected:[39m 
not.stringContainingCustom<ll>

[31m+ Received:[39m 
"hello"",
  "expected": "not.stringContainingCustom<ll>",
  "message": "expected 'hello' to deeply equal not.stringContainingCustom<ll>",
}
`;

exports[`asymmetric matcher error 7`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[2m  Object {[22m
[32m-   "foo": stringContainingCustom<xx>,[39m
[31m+   "foo": "hello",[39m
[2m  }[22m",
  "expected": "Object {
  "foo": stringContainingCustom<xx>,
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: stringContainingCustom<xx> }",
}
`;

exports[`asymmetric matcher error 8`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[2m  Object {[22m
[32m-   "foo": not.stringContainingCustom<ll>,[39m
[31m+   "foo": "hello",[39m
[2m  }[22m",
  "expected": "Object {
  "foo": not.stringContainingCustom<ll>,
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: not.stringContainingCustom<ll> }",
}
`;

exports[`asymmetric matcher error 9`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "undefined",
  "message": "expected [31m"hello"[39m to contain [32m"xx"[39m",
}
`;

exports[`asymmetric matcher error 10`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "undefined",
  "message": "expected [31m"hello"[39m not to contain [32m"ll"[39m",
}
`;

exports[`asymmetric matcher error 11`] = `
{
  "actual": "hello",
  "diff": "[32m- Expected:[39m 
testComplexMatcher<[object Object]>

[31m+ Received:[39m 
"hello"",
  "expected": "testComplexMatcher<[object Object]>",
  "message": "expected 'hello' to deeply equal testComplexMatcher<[object Object]>",
}
`;

exports[`asymmetric matcher error 12`] = `
{
  "actual": "Object {
  "k": "v",
  "k2": "v2",
}",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[32m- ObjectContaining {[39m
[31m+ Object {[39m
[2m    "k": "v",[22m
[32m-   "k3": "v3",[39m
[31m+   "k2": "v2",[39m
[2m  }[22m",
  "expected": "ObjectContaining {
  "k": "v",
  "k3": "v3",
}",
  "message": "expected { k: 'v', k2: 'v2' } to deeply equal ObjectContaining {"k": "v", "k3": "v3"}",
}
`;

exports[`asymmetric matcher error 13`] = `
{
  "actual": "Array [
  "a",
  "b",
]",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[32m- ArrayContaining [[39m
[31m+ Array [[39m
[2m    "a",[22m
[32m-   "c",[39m
[31m+   "b",[39m
[2m  ][22m",
  "expected": "ArrayContaining [
  "a",
  "c",
]",
  "message": "expected [ 'a', 'b' ] to deeply equal ArrayContaining ["a", "c"]",
}
`;

exports[`asymmetric matcher error 14`] = `
{
  "actual": "hello",
  "diff": null,
  "expected": "StringMatching /xx/",
  "message": "expected 'hello' to deeply equal StringMatching /xx/",
}
`;

exports[`asymmetric matcher error 15`] = `
{
  "actual": "2.5",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[32m- NumberCloseTo 2 (1 digit)[39m
[31m+ 2.5[39m",
  "expected": "NumberCloseTo 2 (1 digit)",
  "message": "expected 2.5 to deeply equal NumberCloseTo 2 (1 digit)",
}
`;

exports[`asymmetric matcher error 16`] = `
{
  "actual": "hello",
  "diff": null,
  "expected": "StringContaining "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"",
  "message": "expected 'hello' to deeply equal StringContaining{…}",
}
`;

exports[`asymmetric matcher error 17`] = `
{
  "actual": "hello",
  "diff": null,
  "expected": "StringContaining "xx"",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 18`] = `
{
  "actual": "hello",
  "diff": "[32m- Expected:[39m 
stringContainingCustom<xx>

[31m+ Received:[39m 
"hello"",
  "expected": "stringContainingCustom<xx>",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 19`] = `
{
  "actual": "hello",
  "diff": null,
  "expected": "StringContaining "ll"",
  "message": "expected error not to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 20`] = `
{
  "actual": "hello",
  "diff": "[32m- Expected:[39m 
stringContainingCustom<ll>

[31m+ Received:[39m 
"hello"",
  "expected": "stringContainingCustom<ll>",
  "message": "expected error not to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 21`] = `
{
  "actual": "[Error: hello]",
  "diff": "[32m- Expected:[39m 
StringContaining "ll"

[31m+ Received:[39m 
[Error: hello]",
  "expected": "StringContaining "ll"",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 22`] = `
{
  "actual": "[Error: hello]",
  "diff": "[32m- Expected:[39m 
stringContainingCustom<ll>

[31m+ Received:[39m 
[Error: hello]",
  "expected": "stringContainingCustom<ll>",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 23`] = `
{
  "actual": "[Error: hello]",
  "diff": "[32m- Expected:[39m 
[Function MyError1]

[31m+ Received:[39m 
[Error: hello]",
  "expected": "[Function MyError1]",
  "message": "expected error to be instance of MyError1",
}
`;

exports[`toHaveBeenNthCalledWith error 1`] = `
{
  "actual": "Array [
  "Hi",
]",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[2m  Array [[22m
[32m-   "hey",[39m
[31m+   "Hi",[39m
[2m  ][22m",
  "expected": "Array [
  "hey",
]",
  "message": "expected 2nd "spy" call to have been called with [ 'hey' ]",
}
`;

exports[`toHaveBeenNthCalledWith error 2`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "Array [
  "hey",
]",
  "message": "expected 3rd "spy" call to have been called with [ 'hey' ], but called only 2 times",
}
`;

exports[`toMatch/toContain diff 1`] = `
{
  "actual": "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[32m- world[39m
[31m+ hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello[39m",
  "expected": "world",
  "message": "expected 'hellohellohellohellohellohellohellohe…' to contain 'world'",
}
`;

exports[`toMatch/toContain diff 2`] = `
{
  "actual": "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello",
  "diff": "[32m- Expected[39m
[31m+ Received[39m

[32m- world[39m
[31m+ hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello[39m",
  "expected": "world",
  "message": "expected 'hellohellohellohellohellohellohellohe…' to match 'world'",
}
`;

exports[`toMatch/toContain diff 3`] = `
{
  "actual": "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello",
  "diff": "[32m- Expected:[39m 
/world/

[31m+ Received:[39m 
"hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello"",
  "expected": "/world/",
  "message": "expected 'hellohellohellohellohellohellohellohe…' to match /world/",
}
`;
